--- a/README.html
+++ b/README.html
@@ -5,4 +5,4 @@ Remember that this repository does not hold all items and their images. I have o
 -Special Offer items go under "DC" if they are not rare.
 -If an item is both rare and DC, it goes under "Rare", both DC and Seasonal, goes under "DC". The priority is basically Rare -> DC -> Seasonal -> Other.
 
-  
+Click "Clone or Download" button and then "Download ZIP" to download this repository on your PC. Then you can easilly see the items on a folder rather than having to click the files one by one to see the picture.
