--- a/README.html
+++ b/README.html
@@ -4,5 +4,6 @@ Remember that this repository does not hold all items and their images. I have o
 -If an item of same look has both a DC and non-DC version, I will be putting it under "Other" because it can be achieved without need of DCs.
 -Special Offer items go under "DC" if they are not rare.
 -If an item is both rare and DC, it goes under "Rare", both DC and Seasonal, goes under "DC". The priority is basically Rare -> DC -> Seasonal -> Other.
+-Some of the item names are not their exact names in the game but a part of it, so search accordingly. For instance, if there are two weapons named "Blue Latid Axe" and "Strong Blue Latid Axe" both looking the same I might just call it "Latid Axe".
 
 Click "Clone or Download" button and then "Download ZIP" to download this repository on your PC. Then you can easilly see the items on a folder rather than having to click the files one by one to see the picture.
