--- a/README.html
+++ b/README.html
@@ -7,3 +7,5 @@ Remember that this repository does not hold all items and their images. I have o
 -Some of the item names are not their exact names in the game but a part of it, so search accordingly. For instance, if there are two weapons named "Blue Latid Axe" and "Strong Blue Latid Axe" both looking the same I might just call it "Latid Axe".
 
 Click "Clone or Download" button and then "Download ZIP" to download this repository on your PC. Then you can easilly see the items on a folder rather than having to click the files one by one to see the picture.
+
+-Capes and Wings are currently being added, 151 different looking capes are added for now.
