--- a/README.html
+++ b/README.html
@@ -1,5 +1,6 @@
 Remember that this repository does not hold all items and their images. I have only included the items that I liked or felt unique to me in some way. There are many items that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
 
+-The Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of. (According to DF Encyclopedia's A-Z Accessories page)
 -Other is simply DA/non-DA classic items. 
 -If an item of same look has both a DC and non-DC version, I will be putting it under "Other" because it can be achieved without need of DCs.
 -Special Offer items go under "DC" if they are not rare.
@@ -8,4 +9,4 @@ Remember that this repository does not hold all items and their images. I have o
 
 Click "Clone or Download" button and then "Download ZIP" to download this repository on your PC. Then you can easilly see the items on a folder rather than having to click the files one by one to see the picture.
 
--Capes and Wings are currently being added, 151 different looking capes are added for now.
+-All the info is gathered from DF Forum Encyclopedia's A-Z Weapons and A-Z Accessories pages and if there are some items not listed there I possibly might have missed them too. (One example being Survivalist Cape, although I could find it, it was not listed on A-Z Accessories page)
