--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 Remember that this repository does not hold all items and their images. I have only included the items that I liked or felt unique to me in some way. There are many items that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
 
 -The Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of. (According to DF Encyclopedia's A-Z Accessories page)
--Other is simply DA/non-DA classic items. 
+-"Other" is simply DA/non-DA classic items. 
 -If an item of same look has both a DC and non-DC version, I will be putting it under "Other" because it can be achieved without need of DCs.
 -Special Offer items go under "DC" if they are not rare.
 -If an item is both rare and DC, it goes under "Rare", both DC and Seasonal, goes under "DC". The priority is basically Rare -> DC -> Seasonal -> Other.
