--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-Remember that this repository does not hold all items and their images. I have only included the items that I liked or felt unique to me in some way. There are many items that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
+Remember that this repository does not hold all items and their images. I have only included the weapons that I liked or felt unique to me in some way. There are many weapons that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
 
 -The Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of. (According to DF Encyclopedia's A-Z Accessories page)
 -"Other" is simply DA/non-DA classic items. 
