--- a/README.html
+++ b/README.html
@@ -1,3 +1,5 @@
+Click "Clone or Download" button and then "Download ZIP" to download this repository on your PC. Then you can easily see the items on a folder rather than having to click the files one by one to see the picture.
+
 Remember that this repository does not hold all items and their images. I have only included the weapons that I liked or felt unique to me in some way. There are many weapons that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
 
 -The Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of. (According to DF Encyclopedia's A-Z Accessories page)
@@ -7,6 +9,4 @@ Remember that this repository does not hold all items and their images. I have o
 -If an item is both rare and DC, it goes under "Rare", both DC and Seasonal, goes under "DC". The priority is basically Rare -> DC -> Seasonal -> Other.
 -Some of the item names are not their exact names in the game but a part of it, so search accordingly. For instance, if there are two weapons named "Blue Latid Axe" and "Strong Blue Latid Axe" both looking the same I might just call it "Latid Axe".
 
-Click "Clone or Download" button and then "Download ZIP" to download this repository on your PC. Then you can easilly see the items on a folder rather than having to click the files one by one to see the picture.
-
--All the info is gathered from DF Forum Encyclopedia's A-Z Weapons and A-Z Accessories pages and if there are some items not listed there I possibly might have missed them too. (One example being Survivalist Cape, although I could find it, it was not listed on A-Z Accessories page)
+All the info is gathered from DF Forum Encyclopedia's A-Z Weapons and A-Z Accessories pages and if there are some items not listed there I possibly might have missed them too. (One example being Survivalist Cape, although I could find it, it was not listed on A-Z Accessories page)
