--- a/README.html
+++ b/README.html
@@ -1,3 +1,5 @@
+Last Update: 05/04/2018 (MM/DD/YYYY)
+
 Click "Clone or Download" button and then "Download ZIP" to download this repository on your PC. Then you can easily see the items on a folder rather than having to click the files one by one to see the picture.
 
 Remember that this repository does not hold all items and their images. I have only included the weapons that I liked or felt unique to me in some way. There are many weapons that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
