--- a/README.html
+++ b/README.html
@@ -4,7 +4,7 @@ Click "Clone or Download" button and then "Download ZIP" to download this reposi
 
 Remember that this repository does not hold all items and their images. I have only included the weapons that I liked or felt unique to me in some way. There are many weapons that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
 
--The Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of. (According to DF Encyclopedia's A-Z Accessories page)
+-Scythes and Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of or some forms of the scythes. (According to DF Encyclopedia's A-Z Accessories page)
 -"Other" is simply DA/non-DA classic items. 
 -If an item of same look has both a DC and non-DC version, I will be putting it under "Other" because it can be achieved without need of DCs.
 -Special Offer items go under "DC" if they are not rare.
@@ -12,3 +12,5 @@ Remember that this repository does not hold all items and their images. I have o
 -Some of the item names are not their exact names in the game but a part of it, so search accordingly. For instance, if there are two weapons named "Blue Latid Axe" and "Strong Blue Latid Axe" both looking the same I might just call it "Latid Axe".
 
 All the info is gathered from DF Forum Encyclopedia's A-Z Weapons and A-Z Accessories pages and if there are some items not listed there I possibly might have missed them too. (One example being Survivalist Cape, although I could find it, it was not listed on A-Z Accessories page)
+
+-If you find some nice weapons I have missed contact me on Discord throwing a pic of them at me. Or notice me if any of the categorizations are wrong or you have found an item that was not listed on A-Z pages. Thanks.
