--- a/README.html
+++ b/README.html
@@ -4,7 +4,7 @@ Click "Clone or Download" button and then "Download ZIP" to download this reposi
 
 Remember that this repository does not hold all items and their images. I have only included the weapons that I liked or felt unique to me in some way. There are many weapons that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
 
--Scythes and Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of or some forms of the scythes. (According to DF Encyclopedia's A-Z Accessories page)
+-Scythes and Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of or some forms of the scythes. (According to DF Encyclopedia's A-Z Accessories and A-Z Weapons page)
 -"Other" is simply DA/non-DA classic items. 
 -If an item of same look has both a DC and non-DC version, I will be putting it under "Other" because it can be achieved without need of DCs.
 -Special Offer items go under "DC" if they are not rare.
