--- a/README.html
+++ b/README.html
@@ -2,7 +2,7 @@ Last Update: 06/01/2018 (MM/DD/YYYY)
 
 Click "Clone or Download" button and then "Download ZIP" to download this repository on your PC. Then you can easily see the items on a folder rather than having to click the files one by one to see the picture.
 
-Remember that this repository does not hold all items and their images. I have only included the weapons that I liked or felt unique to me in some way. There are many weapons that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
+Remember that this repository does not hold all items and their images. I have only included the weapons that I liked or that felt unique to me in some way. There are many weapons that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
 
 -Scythes and Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of or some forms of the scythes. (According to DF Encyclopedia's A-Z Accessories and A-Z Weapons page)
 -"Other" is simply DA/non-DA classic items. 
