--- a/README.html
+++ b/README.html
@@ -6,7 +6,7 @@ Remember that this repository does not hold all items and their images. I have o
 
 -Scythes and Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of or some forms of the scythes. (According to DF Encyclopedia's A-Z Accessories and A-Z Weapons page)
 -"Other" is simply DA/non-DA classic items. 
--If an item of same look has both a DC and non-DC version, I will be putting it under "Other" because it can be achieved without need of DCs.
+-If an item of same look has both a DC and non-DC version, I will be putting it under "Other" because it can be achieved without need of DCs. Same goes for rare and non-rare. Achievability is what comes first here.
 -Special Offer items go under "DC" if they are not rare.
 -If an item is both rare and DC, it goes under "Rare", both DC and Seasonal, goes under "DC". The priority is basically Rare -> DC -> Seasonal -> Other.
 -Some of the item names are not their exact names in the game but a part of it, so search accordingly. For instance, if there are two weapons named "Blue Latid Axe" and "Strong Blue Latid Axe" both looking the same I might just call it "Latid Axe".
