--- a/README.html
+++ b/README.html
@@ -14,3 +14,14 @@ Remember that this repository does not hold all items and their images. I have o
 All the info is gathered from DF Forum Encyclopedia's A-Z Weapons and A-Z Accessories pages and if there are some items not listed there I possibly might have missed them too. (One example being Survivalist Cape, although I could find it, it was not listed on A-Z Accessories page)
 
 -If you find some nice weapons I have missed contact me on Discord throwing a pic of them at me. Or notice me if any of the categorizations are wrong or you have found an item that was not listed on A-Z pages. Thanks.
+
+What is Soon ?
+
+-Helms
+-Staves
+-Daggers
+
+What is Soon™ ?
+
+-BiS Fashion Calculator
+-A folder with named sets from players in it.
