--- a/README.html
+++ b/README.html
@@ -23,5 +23,6 @@ What is Soon ?
 
 What is Soon™ ?
 
+-Updating "Swords, Axes, Maces" to include all images, whether I like them or not
 -BiS Fashion Calculator
--A folder with named sets from players in it.
+-A folder with named sets from players in it
