--- a/README.html
+++ b/README.html
@@ -1,10 +1,10 @@
-Last Update: 06/14/2018 (MM/DD/YYYY)
+Last Update: 06/16/2018 (MM/DD/YYYY)
 
 Click "Clone or Download" button and then "Download ZIP" to download this repository on your PC. Then you can easily see the items on a folder rather than having to click the files one by one to see the picture.
 
 Remember that this repository does not hold all items and their images. I have only included the weapons that I liked or that felt unique to me in some way. There are many weapons that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
 
--Scythes and Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of or some forms of the scythes. (According to DF Encyclopedia's A-Z Accessories and A-Z Weapons page)
+-Scythes, Helms and Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of or some clickable forms of the items. (According to DF Encyclopedia's A-Z Accessories and A-Z Weapons page)
 -"Other" is simply DA/non-DA classic items. 
 -If an item of same look has both a DC and non-DC version, I will be putting it under "Other" because it can be achieved without need of DCs. Same goes for rare and non-rare. Achievability is what comes first here.
 -Special Offer items go under "DC" if they are not rare.
@@ -17,7 +17,6 @@ All the info is gathered from DF Forum Encyclopedia's A-Z Weapons and A-Z Access
 
 What is Soon ?
 
--Helms
 -Staves
 -Daggers
 
