--- a/README.html
+++ b/README.html
@@ -1,22 +1,23 @@
-Last Update: 06/16/2018 (MM/DD/YYYY)
+Last Update: 06/18/2018 (MM/DD/YYYY)
 
 Click "Clone or Download" button and then "Download ZIP" to download this repository on your PC. Then you can easily see the items on a folder rather than having to click the files one by one to see the picture.
 
 Remember that this repository does not hold all items and their images. I have only included the weapons that I liked or that felt unique to me in some way. There are many weapons that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
 
--Scythes, Helms and Cape/Cloaks are completely complete except for some Rare items I couldn't find any photo of or some clickable forms of the items. (According to DF Encyclopedia's A-Z Accessories and A-Z Weapons page)
+-Scythes, Helms, Pets and Cape/Cloaks are completely complete except for some Rare capes I couldn't find any photo of or some clickable forms of the items. (According to DF Encyclopedia's A-Z Accessories and A-Z Weapons page)
 -"Other" is simply DA/non-DA classic items. 
 -If an item of same look has both a DC and non-DC version, I will be putting it under "Other" because it can be achieved without need of DCs. Same goes for rare and non-rare. Achievability is what comes first here.
 -Special Offer items go under "DC" if they are not rare.
 -If an item is both rare and DC, it goes under "Rare", both DC and Seasonal, goes under "DC". The priority is basically Rare -> DC -> Seasonal -> Other.
 -Some of the item names are not their exact names in the game but a part of it, so search accordingly. For instance, if there are two weapons named "Blue Latid Axe" and "Strong Blue Latid Axe" both looking the same I might just call it "Latid Axe".
 
-All the info is gathered from DF Forum Encyclopedia's A-Z Weapons and A-Z Accessories pages and if there are some items not listed there I possibly might have missed them too. (One example being Survivalist Cape, although I could find it, it was not listed on A-Z Accessories page)
+All the info is gathered from DF Forum Encyclopedia's "Pets / Guests", "A-Z Weapons" and "A-Z Accessories" pages and if there are some items not listed there I possibly might have missed them too. (One example being Survivalist Cape, although I could find it, it was not listed on A-Z Accessories page)
 
--If you find some nice weapons I have missed contact me on Discord throwing a pic of them at me. Or notice me if any of the categorizations are wrong or you have found an item that was not listed on A-Z pages. Thanks.
+-If you find some nice items I have missed contact me on Discord throwing a pic of them at me. Or notice me if any of the categorizations are wrong or you have found an item that was not listed on A-Z pages. Or if I made typos. Thanks.
 
 What is Soon ?
 
+-Hairstyles
 -Staves
 -Daggers
 
