--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-Last Update: 06/18/2018 (MM/DD/YYYY)
+Last Update: 06/30/2018 (MM/DD/YYYY)
 
 Click "Clone or Download" button and then "Download ZIP" to download this repository on your PC. Then you can easily see the items on a folder rather than having to click the files one by one to see the picture.
 
@@ -17,7 +17,7 @@ All the info is gathered from DF Forum Encyclopedia's "Pets / Guests", "A-Z Weap
 
 What is Soon ?
 
--Hairstyles
+-Hairstyles (I still need someone to help me collect Female unisex pyro hairstyles and both male and female storybook hairstyles. If you are willing to help by telling me the name of the hairstyles, notice me in Discord)
 -Staves
 -Daggers
 
