--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-Last Update: 07/01/2018 (MM/DD/YYYY)
+Last Update: 07/06/2018 (MM/DD/YYYY)
 
 Click "Clone or Download" button and then "Download ZIP" to download this repository on your PC. Then you can easily see the items on a folder rather than having to click the files one by one to see the picture.
 
@@ -13,16 +13,18 @@ Remember that this repository does not hold all items and their images. I have o
 
 All the info is gathered from DF Forum Encyclopedia's "Pets / Guests", "A-Z Weapons" and "A-Z Accessories" pages and if there are some items not listed there I possibly might have missed them too. (One example being Survivalist Cape, although I could find it, it was not listed on A-Z Accessories page)
 
--If you find some nice items I have missed contact me on Discord throwing a pic of them at me. Or notice me if any of the categorizations are wrong or you have found an item that was not listed on A-Z pages. Or if I made typos. Thanks.
+-If you find some items I have missed contact me on Discord throwing a pic of them at me. Or notice me if any of the categorizations are wrong or you have found an item that was not listed on A-Z pages. Or if I made typos. Thanks.
 
 What is Soon ?
 
--Hairstyles (I still need someone to help me collect Female unisex pyro hairstyles and both male and female storybook hairstyles. If you are willing to help by telling me the name of the hairstyles, notice me in Discord)
--Staves
+-Staves (Complete between A-K)
 -Daggers
 
 What is Soon™ ?
 
+-Alexander Saga items
+-Ashknight Saga items
+-Hairstyles (I still need someone to help me collect Female unisex pyro hairstyles and both male and female storybook hairstyles. If you are willing to help by telling me the name of the hairstyles, notice me in Discord)
 -Updating "Swords, Axes, Maces" to include all images, whether I like them or not
 -BiS Fashion Calculator
 -A folder with named sets from players in it
