--- a/README.html
+++ b/README.html
@@ -4,9 +4,9 @@ Click "Clone or Download" button and then "Download ZIP" to download this reposi
 
 Remember that this repository does not hold all items and their images. I have only included the weapons that I liked or that felt unique to me in some way. There are many weapons that I didn't collect here (The reason is them being too old/bad and not good for fashion IMO), therefore do not mistake this for an encyclopedia.
 
--Scythes, Helms, Pets and Cape/Cloaks are completely complete except for some Rare capes I couldn't find any photo of or some clickable forms of the items. (According to DF Encyclopedia's A-Z Accessories and A-Z Weapons page)
+-Scythes, Staves/Wands, Helms, Pets and Cape/Cloaks are completely complete except for some Rare capes I couldn't find any photo of (And World Cup capes) or some clickable forms of the items. (According to DF Encyclopedia's A-Z Accessories and A-Z Weapons page)
 -"Other" is simply DA/non-DA classic items. 
--If an item of same look has both a DC and non-DC version, I will be putting it under "Other" because it can be achieved without need of DCs. Same goes for rare and non-rare. Achievability is what comes first here.
+-If an item of same looks has both a DC and non-DC version, I will be putting it under "Other" because it can be achieved without need of DCs. Same goes for rare and non-rare. Achievability is what comes first here.
 -Special Offer items go under "DC" if they are not rare.
 -If an item is both rare and DC, it goes under "Rare", both DC and Seasonal, goes under "DC". The priority is basically Rare -> DC -> Seasonal -> Other.
 -Some of the item names are not their exact names in the game but a part of it, so search accordingly. For instance, if there are two weapons named "Blue Latid Axe" and "Strong Blue Latid Axe" both looking the same I might just call it "Latid Axe".
@@ -17,11 +17,11 @@ All the info is gathered from DF Forum Encyclopedia's "Pets / Guests", "A-Z Weap
 
 What is Soon ?
 
--Staves (Complete between A-K)
 -Daggers
 
 What is Soon™ ?
 
+-Soulforge Fashion
 -Alexander Saga items
 -Ashknight Saga items
 -Hairstyles (I still need someone to help me collect Female unisex pyro hairstyles and both male and female storybook hairstyles. If you are willing to help by telling me the name of the hairstyles, notice me in Discord)
