--- a/README.html
+++ b/README.html
@@ -10,12 +10,17 @@ Therefore do not mistake this for an encyclopedia.
 
 -Scythes, Staves/Wands, Helms, Pets and Cape/Cloaks are completely complete except for some Rare capes I couldn't find any photo of 
 (And World Cup capes) or some clickable forms of the items. (According to DF Encyclopedia's A-Z Accessories and A-Z Weapons page)
+
 -"Other" is simply DA/non-DA classic items. 
+
 -If an item of same looks has both a DC and non-DC version, I will be putting it under "Other" because it can be achieved without DCs. 
 Same goes for rare and non-rare. Achievability is what comes first here.
+
 -Special Offer items go under "DC" if they are not rare.
+
 -If an item is both rare and DC, it goes under "Rare", both DC and Seasonal, goes under "DC". 
 The priority is basically Rare -> DC -> Seasonal.
+
 -Some of the item names are not their exact names in the game but a part of it, so search accordingly. 
 For Example, if there are two weapons named "Blue Latid Axe" and "Dark Blue Latid Axe" both looking the same I might call it "Latid Axe".
 
@@ -24,7 +29,7 @@ and if there are some items not listed there I possibly might have missed them t
 (Some examples being Survivalist Cape, Frozen Staff and Noon Promise Staff although I could find them, 
 they were not listed on A-Z Accessories page)
 
--If you find some items I have missed contact me on Discord throwing a pic of them at me. 
+!!!!! If you find some items I have missed contact me on Discord throwing a pic of them at me. 
 Or notice me if any of the categorizations are wrong or you have found an item that was not listed on A-Z pages. Or if I made typos. 
 Thanks...
 
