--- a/README.html
+++ b/README.html
@@ -30,7 +30,7 @@ and if there are some items not listed there I possibly might have missed them t
 they were not listed on A-Z Accessories page)
 
 !!!!! If you find some items I have missed contact me on Discord throwing a pic of them at me. 
-Or notice me if any of the categorizations are wrong or you have found an item that was not listed on A-Z pages. Or if I made typos. 
+Or notify me if any of the categorizations are wrong or you have found an item that was not listed on A-Z pages. Or if I made typos. 
 Thanks...
 
 What is Soon ?
@@ -43,7 +43,7 @@ What is Soon™ ?
 -Alexander Saga items
 -Ashknight Saga items
 -Hairstyles (I still need someone to help me collect Female unisex pyro hairstyles and both male and female storybook hairstyles. 
-If you are willing to help by telling me the name of the hairstyles, notice me in Discord)
+If you are willing to help by telling me the name of the hairstyles, notify me in Discord)
 -Updating "Swords, Axes, Maces" to include all images, whether I like them or not
 -BiS Fashion Calculator
 -A folderful of player made sets
